--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +60,7 @@
     "import pandas as pd\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import QuantileTransformer"
+    "from sklearn.preprocessing import normalize"
    ]
   },
   {
@@ -553,14 +553,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 질환유무 가공\n",
-    "disease_list = np.array(['HT', 'DM', 'UL', 'AL', 'MI', 'TH', 'CH', 'CD',\n",
-    "                         'LP', 'AS', 'CL', 'PV', 'KD', 'CV', 'HN', 'GT',\n",
-    "                         'TOTCA1'])\n",
+    "disease_list = np.array(['HT', 'DM', 'UL', 'AL', 'MI',\n",
+    "                         'TH', 'CH', 'CD', 'LP', 'AS',\n",
+    "                         'CL', 'PV', 'KD', 'CV', 'HN',\n",
+    "                         'GT', 'TOTCA1'])\n",
     "for x in disease_list:\n",
     "    dataset['AS1_'+x] = np.where((dataset['AS1_PD'+x] == 2) | (dataset['AS1_TRT'+x] == 2), 1, 0)\n",
     "\n",
@@ -574,8 +575,9 @@
    "outputs": [],
    "source": [
     "# 약물력 가공\n",
-    "drug_list = np.array(['ST', 'CP', 'INS', 'HT', 'AR', 'UL', \n",
-    "                      'TH', 'FH', 'OS', 'DM', 'STK', 'AS', 'LP'])  # CP, HP 제외\n",
+    "drug_list = np.array(['ST', 'CP', 'INS', 'HT', 'AR', \n",
+    "                      'UL', 'TH', 'FH', 'OS', 'DM',\n",
+    "                      'STK', 'AS', 'LP'])  # CP, HP 제외\n",
     "for x in drug_list:\n",
     "    dataset['AS1_DR'+x] = np.where((dataset['AS1_DRUG'+x] == 2) | (dataset['AS1_DRUG'+x+'CU'] == 2), 1, 0)\n"
    ]
@@ -1345,15 +1347,7 @@
     "    - AS1_NA_U\n",
     "    - AS1_K_U\n",
     "\n",
-    "  - 변수 정리할 때까지, 그냥 0으로 대체\n",
-    "\n",
-    "\n",
-    "- 여성력 관련 변수 처리 방법?\n",
-    "  - AS1_MNSAG\n",
-    "  - AS1_HYST\n",
-    "  - AS1_HYSTOVARYW\n",
-    "  - AS1_OVARYW\n",
-    "  - AS1_BRCA"
+    "  - 변수 정리할 때까지, 그냥 0으로 대체"
    ]
   },
   {
@@ -1381,13 +1375,13 @@
    },
    "outputs": [],
    "source": [
-    "binary = pd.DataFrame(QuantileTransformer().fit_transform(raw_binary), index=dataset.index, columns=raw_binary.columns).astype('float')\n",
+    "binary = pd.DataFrame(normalize(raw_binary, norm='l2'), index=dataset.index, columns=raw_binary.columns).astype('float')\n",
     "cath0 = pd.get_dummies(raw_cath0, columns=raw_cath0.columns, drop_first=True, dtype='float64') # one-hot-encoding\n",
-    "cath1 = pd.DataFrame(QuantileTransformer().fit_transform(raw_cath1), index=dataset.index, columns=raw_cath1.columns).astype('float')\n",
-    "cnt = pd.DataFrame(QuantileTransformer().fit_transform(raw_cnt), index=dataset.index, columns=raw_cnt.columns).astype('float')\n",
+    "cath1 = pd.DataFrame(normalize(raw_cath1, norm='l2'), index=dataset.index, columns=raw_cath1.columns).astype('float')\n",
+    "cnt = pd.DataFrame(normalize(raw_cnt, norm='l2'), index=dataset.index, columns=raw_cnt.columns).astype('float')\n",
     "tumor_name = pd.get_dummies(raw_tumor_name, columns=raw_tumor_name.columns, drop_first=True, dtype='float64') # one-hot-encoding\n",
     "\n",
-    "label = pd.DataFrame(QuantileTransformer().fit_transform(raw_label), index=dataset.index, columns=raw_label.columns).astype('float')"
+    "label = pd.DataFrame(normalize(raw_label, norm='l2'), index=dataset.index, columns=raw_label.columns).astype('float')"
    ]
   },
   {
