--- a/황승현 활동정리.md
+++ b/황승현 활동정리.md
@@ -57,67 +57,67 @@ var_to_use = pd.read_csv("dataset/var_to_use_2023-03-30T2240I.csv")
   
   - 데이터 가공 후 사용할 변수 목록
 
-| binary(0 또는 1 ) | cath0 (계층 없는 범주형 변수) | cath1 (계층 있는 범주형 변수) | cnt (연속현 변수)       | tumor_name (종양 또는 여성력 병명) | dependent (종속변수) |
-| --------------- | -------------------- | -------------------- | ------------------ | ------------------------- | ---------------- |
-| AS1_SEX         | AS1_JOBB             | AS1_EDUA             | AS1_AGE            | AS1_PDTOTCA1NA            | AS1_DT           |
-| AS1_HT          | AS1_FMHTREL_N        | AS1_DRINK            | AS1_TOTALC         | AS1_TRTTOTCA1NA           | AS1_MT           |
-| AS1_DM          | AS1_FMHTREL_P        | AS1_SMOKEA           | AS1_SLPAMTM        | AS1_OBGYOPNA              |                  |
-| AS1_UL          | AS1_FMHTREL_S        | AS1_INCOME           | AS1_ENERGY         |                           |                  |
-| AS1_AL          | AS1_FMHTREL_O        | AS1_PHYSTB           | AS1_CARBO          |                           |                  |
-| AS1_MI          | AS1_FMDMREL_N        | AS1_PHYSIT           | AS1_FAT            |                           |                  |
-| AS1_TH          | AS1_FMDMREL_P        | AS1_PHYACTL          | AS1_PROT           |                           |                  |
-| AS1_CH          | AS1_FMDMREL_S        | AS1_PHYACTM          | AS1_FIBER          |                           |                  |
-| AS1_CD          | AS1_FMDMREL_O        | AS1_PHYACTH          | AS1_RETINOL        |                           |                  |
-| AS1_LP          | AS1_FMHEREL_N        |                      | AS1_BETACARO       |                           |                  |
-| AS1_AS          | AS1_FMHEREL_P        |                      | AS1_VITD           |                           |                  |
-| AS1_CL          | AS1_FMHEREL_S        |                      | AS1_VITE           |                           |                  |
-| AS1_PV          | AS1_FMHEREL_O        |                      | AS1_VITK           |                           |                  |
-| AS1_KD          | AS1_FMOSREL_N        |                      | AS1_VITC           |                           |                  |
-| AS1_TOTCA1      | AS1_FMOSREL_P        |                      | AS1_VITB12         |                           |                  |
-| AS1_CV          | AS1_FMOSREL_S        |                      | AS1_CALCIUM        |                           |                  |
-| AS1_HN          | AS1_FMOSREL_O        |                      | AS1_PHOS           |                           |                  |
-| AS1_GT          | AS1_FMCVAREL_N       |                      | AS1_SODIUM         |                           |                  |
-| AS1_ARRM        | AS1_FMCVAREL_P       |                      | AS1_POTASS         |                           |                  |
-| AS1_DRST        | AS1_FMCVAREL_S       |                      | AS1_MAGNE          |                           |                  |
-| AS1_DRINS       | AS1_FMCVAREL_O       |                      | AS1_FE             |                           |                  |
-| AS1_DRHT        | AS1_FMCVBREL_N       |                      | AS1_ZN             |                           |                  |
-| AS1_DRAR        | AS1_FMCVBREL_P       |                      | AS1_COPPER         |                           |                  |
-| AS1_DRUL        | AS1_FMCVBREL_S       |                      | AS1_MANGAN         |                           |                  |
-| AS1_DRTH        | AS1_FMCVBREL_O       |                      | AS1_SE             |                           |                  |
-| AS1_DROS        | AS1_FMCDREL_N        |                      | AS1_CHOL           |                           |                  |
-| AS1_DRDM        | AS1_FMCDREL_P        |                      | AS1_SFA            |                           |                  |
-| AS1_DRSTK       | AS1_FMCDREL_S        |                      | AS1_USFA           |                           |                  |
-| AS1_DRAS        | AS1_FMCDREL_O        |                      | AS1_MUFA           |                           |                  |
-| AS1_DRLP        | AS1_FMCHREL_N        |                      | AS1_PUFA           |                           |                  |
-|                 | AS1_FMCHREL_P        |                      | AS1_N3N6RATIO      |                           |                  |
-|                 | AS1_FMCHREL_S        |                      | AS1_HOMAIR         |                           |                  |
-|                 | AS1_FMCHREL_O        |                      | AS1_NEAP           |                           |                  |
-|                 | AS1_FMPVREL_N        |                      | AS1_PRAL           |                           |                  |
-|                 | AS1_FMPVREL_P        |                      | AS1_DASH           |                           |                  |
-|                 | AS1_FMPVREL_S        |                      | AS1_GLU0_TR        |                           |                  |
-|                 | AS1_FMPVREL_O        |                      | AS1_ALBUMIN_TR     |                           |                  |
-|                 | AS1_FMLPREL_N        |                      | AS1_CREATININE_TR1 |                           |                  |
-|                 | AS1_FMLPREL_P        |                      | AS1_AST_TR         |                           |                  |
-|                 | AS1_FMLPREL_S        |                      | AS1_ALT_TR         |                           |                  |
-|                 | AS1_FMLPREL_O        |                      | AS1_TCHL_TR        |                           |                  |
-|                 | AS1_FMGTREL_N        |                      | AS1_HDL_TR         |                           |                  |
-|                 | AS1_FMGTREL_P        |                      | AS1_TOTPRT         |                           |                  |
-|                 | AS1_FMGTREL_S        |                      | AS1_CA             |                           |                  |
-|                 | AS1_FMGTREL_O        |                      | AS1_NA             |                           |                  |
-|                 | AS1_DRCP             |                      | AS1_K              |                           |                  |
-|                 | AS1_DRFH             |                      | AS1_CRP            |                           |                  |
-|                 | AS1_PREG             |                      | AS1_HBA1C          |                           |                  |
-|                 | AS1_HYST             |                      | AS1_INS0           |                           |                  |
-|                 | AS1_HYSTOVARYW       |                      | AS1_PRT_U          |                           |                  |
-|                 | AS1_OVARYW           |                      | AS1_CREATINE_U     |                           |                  |
-|                 | AS1_OBGYOP           |                      | AS1_CA_U           |                           |                  |
-|                 | AS1_BRCA             |                      | AS1_NA_U           |                           |                  |
-|                 |                      |                      | AS1_K_U            |                           |                  |
-|                 |                      |                      | AS1_TSH            |                           |                  |
-|                 |                      |                      | AS1_WAIST          |                           |                  |
-|                 |                      |                      | AS1_HEIGHT         |                           |                  |
-|                 |                      |                      | AS1_WEIGHT         |                           |                  |
-|                 |                      |                      | AS1_BMI            |                           |                  |
+| binary(0 또는 1) | cath0 (계층 없는 범주형 변수) | cath1 (계층 있는 범주형 변수) | cnt (연속형 변수)       | tumor_name (종양 또는 여성력 병명) | dependent (종속변수) |
+| -------------- | -------------------- | -------------------- | ------------------ | ------------------------- | ---------------- |
+| AS1_SEX        | AS1_JOBB             | AS1_EDUA             | AS1_AGE            | AS1_PDTOTCA1NA            | AS1_DT           |
+| AS1_HT         | AS1_FMHTREL_N        | AS1_DRINK            | AS1_TOTALC         | AS1_TRTTOTCA1NA           | AS1_MT           |
+| AS1_DM         | AS1_FMHTREL_P        | AS1_SMOKEA           | AS1_SLPAMTM        | AS1_OBGYOPNA              |                  |
+| AS1_UL         | AS1_FMHTREL_S        | AS1_INCOME           | AS1_ENERGY         |                           |                  |
+| AS1_AL         | AS1_FMHTREL_O        | AS1_PHYSTB           | AS1_CARBO          |                           |                  |
+| AS1_MI         | AS1_FMDMREL_N        | AS1_PHYSIT           | AS1_FAT            |                           |                  |
+| AS1_TH         | AS1_FMDMREL_P        | AS1_PHYACTL          | AS1_PROT           |                           |                  |
+| AS1_CH         | AS1_FMDMREL_S        | AS1_PHYACTM          | AS1_FIBER          |                           |                  |
+| AS1_CD         | AS1_FMDMREL_O        | AS1_PHYACTH          | AS1_RETINOL        |                           |                  |
+| AS1_LP         | AS1_FMHEREL_N        |                      | AS1_BETACARO       |                           |                  |
+| AS1_AS         | AS1_FMHEREL_P        |                      | AS1_VITD           |                           |                  |
+| AS1_CL         | AS1_FMHEREL_S        |                      | AS1_VITE           |                           |                  |
+| AS1_PV         | AS1_FMHEREL_O        |                      | AS1_VITK           |                           |                  |
+| AS1_KD         | AS1_FMOSREL_N        |                      | AS1_VITC           |                           |                  |
+| AS1_TOTCA1     | AS1_FMOSREL_P        |                      | AS1_VITB12         |                           |                  |
+| AS1_CV         | AS1_FMOSREL_S        |                      | AS1_CALCIUM        |                           |                  |
+| AS1_HN         | AS1_FMOSREL_O        |                      | AS1_PHOS           |                           |                  |
+| AS1_GT         | AS1_FMCVAREL_N       |                      | AS1_SODIUM         |                           |                  |
+| AS1_ARRM       | AS1_FMCVAREL_P       |                      | AS1_POTASS         |                           |                  |
+| AS1_DRST       | AS1_FMCVAREL_S       |                      | AS1_MAGNE          |                           |                  |
+| AS1_DRINS      | AS1_FMCVAREL_O       |                      | AS1_FE             |                           |                  |
+| AS1_DRHT       | AS1_FMCVBREL_N       |                      | AS1_ZN             |                           |                  |
+| AS1_DRAR       | AS1_FMCVBREL_P       |                      | AS1_COPPER         |                           |                  |
+| AS1_DRUL       | AS1_FMCVBREL_S       |                      | AS1_MANGAN         |                           |                  |
+| AS1_DRTH       | AS1_FMCVBREL_O       |                      | AS1_SE             |                           |                  |
+| AS1_DROS       | AS1_FMCDREL_N        |                      | AS1_CHOL           |                           |                  |
+| AS1_DRDM       | AS1_FMCDREL_P        |                      | AS1_SFA            |                           |                  |
+| AS1_DRSTK      | AS1_FMCDREL_S        |                      | AS1_USFA           |                           |                  |
+| AS1_DRAS       | AS1_FMCDREL_O        |                      | AS1_MUFA           |                           |                  |
+| AS1_DRLP       | AS1_FMCHREL_N        |                      | AS1_PUFA           |                           |                  |
+|                | AS1_FMCHREL_P        |                      | AS1_N3N6RATIO      |                           |                  |
+|                | AS1_FMCHREL_S        |                      | AS1_HOMAIR         |                           |                  |
+|                | AS1_FMCHREL_O        |                      | AS1_NEAP           |                           |                  |
+|                | AS1_FMPVREL_N        |                      | AS1_PRAL           |                           |                  |
+|                | AS1_FMPVREL_P        |                      | AS1_DASH           |                           |                  |
+|                | AS1_FMPVREL_S        |                      | AS1_GLU0_TR        |                           |                  |
+|                | AS1_FMPVREL_O        |                      | AS1_ALBUMIN_TR     |                           |                  |
+|                | AS1_FMLPREL_N        |                      | AS1_CREATININE_TR1 |                           |                  |
+|                | AS1_FMLPREL_P        |                      | AS1_AST_TR         |                           |                  |
+|                | AS1_FMLPREL_S        |                      | AS1_ALT_TR         |                           |                  |
+|                | AS1_FMLPREL_O        |                      | AS1_TCHL_TR        |                           |                  |
+|                | AS1_FMGTREL_N        |                      | AS1_HDL_TR         |                           |                  |
+|                | AS1_FMGTREL_P        |                      | AS1_TOTPRT         |                           |                  |
+|                | AS1_FMGTREL_S        |                      | AS1_CA             |                           |                  |
+|                | AS1_FMGTREL_O        |                      | AS1_NA             |                           |                  |
+|                | AS1_DRCP             |                      | AS1_K              |                           |                  |
+|                | AS1_DRFH             |                      | AS1_CRP            |                           |                  |
+|                | AS1_PREG             |                      | AS1_HBA1C          |                           |                  |
+|                | AS1_HYST             |                      | AS1_INS0           |                           |                  |
+|                | AS1_HYSTOVARYW       |                      | AS1_PRT_U          |                           |                  |
+|                | AS1_OVARYW           |                      | AS1_CREATINE_U     |                           |                  |
+|                | AS1_OBGYOP           |                      | AS1_CA_U           |                           |                  |
+|                | AS1_BRCA             |                      | AS1_NA_U           |                           |                  |
+|                |                      |                      | AS1_K_U            |                           |                  |
+|                |                      |                      | AS1_TSH            |                           |                  |
+|                |                      |                      | AS1_WAIST          |                           |                  |
+|                |                      |                      | AS1_HEIGHT         |                           |                  |
+|                |                      |                      | AS1_WEIGHT         |                           |                  |
+|                |                      |                      | AS1_BMI            |                           |                  |
 
 ### 2. 종속변수 정의
 
@@ -333,17 +333,21 @@ Gradient-boosted decision trees
   
   - 모델 성능이 더 좋아지지 않을 때까지 반복
 
-- XGBoost (eXtreme Gradient Boosting)
-  
-  - 2014, Tianqi Chen
-  
-  - 각 후속 트리가 이전 트리의 오류 수정을 시도하는 일련의 결정 트리를 구축합니다. 각 단계에서 알고리즘은 음의 기울기에 가장 잘 맞는 결정 트리를 구성하는 데 사용되는 손실 함수의 기울기와 헤시안을 계산합니다. 이 프로세스는 원하는 트리 수에 도달하거나 모델이 과적합되기 시작할 때까지 반복됩니다.
+#### XGBoost
 
-- LGBM (Light Gradient Boosting Machine)
-  
-  - 2017, Microsoft
-  
-  - GOSS(Gradient-based One-Side Sampling) 및 EFB(Exclusive Feature Bundling)라는 기술을 기반으로 의사 결정 트리를 구축하기 위해 다른 전략을 사용합니다. GOSS는 손실 함수의 기울기를 기반으로 훈련 데이터를 샘플링하는 기법으로, 정확도를 희생하지 않으면서 훈련에 사용되는 샘플 수를 줄이는 데 도움이 됩니다. EFB는 학습에 사용되는 기능의 수를 줄이기 위해 유사한 기능을 함께 묶어 오버피팅을 줄이고 속도를 향상시키는 데 도움이 되는 기술입니다.
+eXtreme Gradient Boosting
+
+- 2014, Tianqi Chen
+
+- 각 후속 트리가 이전 트리의 오류 수정을 시도하는 일련의 결정 트리를 구축합니다. 각 단계에서 알고리즘은 음의 기울기에 가장 잘 맞는 결정 트리를 구성하는 데 사용되는 손실 함수의 기울기와 헤시안을 계산합니다. 이 프로세스는 원하는 트리 수에 도달하거나 모델이 과적합되기 시작할 때까지 반복됩니다.
+
+#### LGBM
+
+Light Gradient Boosting Machine
+
+- 2017, Microsoft
+
+- GOSS(Gradient-based One-Side Sampling) 및 EFB(Exclusive Feature Bundling)라는 기술을 기반으로 의사 결정 트리를 구축하기 위해 다른 전략을 사용합니다. GOSS는 손실 함수의 기울기를 기반으로 훈련 데이터를 샘플링하는 기법으로, 정확도를 희생하지 않으면서 훈련에 사용되는 샘플 수를 줄이는 데 도움이 됩니다. EFB는 학습에 사용되는 기능의 수를 줄이기 위해 유사한 기능을 함께 묶어 오버피팅을 줄이고 속도를 향상시키는 데 도움이 되는 기술입니다.
 
 ### DNN
 
@@ -359,14 +363,39 @@ Deep Neural Networks
   
   - Deep: 깊다. 은닉층이 많다.
 
-- MLP
-  
-  - 가장 기초적인 DNN
-  
-  - 퍼셉트론을 여러겹 쌓음
-  
-  - 순전파와 역전파로 가중치와 편향을 조정하여, 오류가 적음
-  
-  - 과적합을 방지하기 위해, 파라미터를 세심하게 조정해야 함
+#### MLP
 
-- 
+- 가장 기초적인 DNN
+
+- 퍼셉트론을 여러겹 쌓음
+
+- **역전파**로 가중치와 편향을 조정하여, 오류가 적음
+  
+  - 순전파는 입력층에서 은닉층을 거쳐 출력층으로
+  
+  - 역전파는 출력층에서 은닉층을 거쳐... 반대로.
+    
+    - 오차를 줄이기 위해 가중치 조정
+    
+    - 은닉층의 각 가중치를 오차에 대하여 미분.
+    
+    - 체인 법칙으로 식을 풀어서 미분 풀어씀.
+
+- 과적합을 방지하기 위해, 파라미터를 세심하게 조정해야 함.
+
+#### SAINT
+
+Self-Attention and Intersample Attention Transformer
+
+- seq2seq
+  - 입력 시퀀스로부터 다른 도메인의 시퀀스 출력
+  - 입력 시퀀스를 인코더를 통해 고정된 크기의 컨텍스트 벡터로 압축
+  - 컨텍스트 벡터를 디코더를 통해 출력 시퀀스 출력
+  - 긴 문장... 장기 의존성 문제
+- attention
+  - 디코더가 출력 단어를 예측할 때마다 매번 인코더에서 전체 입력 문장을 다시 참고
+  - 다시 참고할 떄, 예측해야할 단어와 연관이 있는 단어에 가중치 부여
+  - 
+- transformer
+  - self-attention
+  - 기계번역에서 단어들의 맥락을 파악
