--- a/Docs/230601/230601 개발 현황.md
+++ b/Docs/230601/230601 개발 현황.md
@@ -53,11 +53,9 @@
   
   - AS1_HEIGHT
 
-
-
 ## 샘플링, XGB 결과 분석
 
-<img src="file:///C:/GIthub/KoGES_OP/Docs/XGB_Legacy.png" title="" alt="XGB_Legacy.png" data-align="center">
+<img title="" src="file:///C:/GIthub/KoGES_OP/Docs/XGB_Legacy.png" alt="XGB_Legacy.png" data-align="center">
 
 - 샘플링 전
 
@@ -69,18 +67,12 @@
 
 - max_depth: 7
 
-
-
 - 의의
   
   - 샘플링은 다른 알고리즘에서도 효과가 있다.
   
   - 파라미터를 더 조정하면 성능을 향상할 여지가 있다.
 
-
-
 ## 번외: SHAP Value - Feature Importance와 비교하여
 
-- Feature Importance
-  
-  - AGE의 F
+- 
