--- a/Docs/승현 메소드.md
+++ b/Docs/승현 메소드.md
@@ -92,67 +92,67 @@ var_to_use = pd.read_csv("dataset/var_to_use_2023-03-30T2240I.csv")
   
   - 데이터 가공 후 사용할 변수 목록
 
-| binary(0 또는 1) | cath0 (계층 없는 범주형 변수) | cath1 (계층 있는 범주형 변수) | cnt (연속형 변수)       | tumor_name (종양 또는 여성력 병명) | dependent (종속변수) |
-| -------------- | -------------------- | -------------------- | ------------------ | ------------------------- | ---------------- |
-| AS1_SEX        | AS1_JOBB             | AS1_EDUA             | AS1_AGE            | AS1_PDTOTCA1NA            | AS1_DT           |
-| AS1_HT         | AS1_FMHTREL_N        | AS1_DRINK            | AS1_TOTALC         | AS1_TRTTOTCA1NA           | AS1_MT           |
-| AS1_DM         | AS1_FMHTREL_P        | AS1_SMOKEA           | AS1_SLPAMTM        | AS1_OBGYOPNA              |                  |
-| AS1_UL         | AS1_FMHTREL_S        | AS1_INCOME           | AS1_ENERGY         |                           |                  |
-| AS1_AL         | AS1_FMHTREL_O        | AS1_PHYSTB           | AS1_CARBO          |                           |                  |
-| AS1_MI         | AS1_FMDMREL_N        | AS1_PHYSIT           | AS1_FAT            |                           |                  |
-| AS1_TH         | AS1_FMDMREL_P        | AS1_PHYACTL          | AS1_PROT           |                           |                  |
-| AS1_CH         | AS1_FMDMREL_S        | AS1_PHYACTM          | AS1_FIBER          |                           |                  |
-| AS1_CD         | AS1_FMDMREL_O        | AS1_PHYACTH          | AS1_RETINOL        |                           |                  |
-| AS1_LP         | AS1_FMHEREL_N        |                      | AS1_BETACARO       |                           |                  |
-| AS1_AS         | AS1_FMHEREL_P        |                      | AS1_VITD           |                           |                  |
-| AS1_CL         | AS1_FMHEREL_S        |                      | AS1_VITE           |                           |                  |
-| AS1_PV         | AS1_FMHEREL_O        |                      | AS1_VITK           |                           |                  |
-| AS1_KD         | AS1_FMOSREL_N        |                      | AS1_VITC           |                           |                  |
-| AS1_TOTCA1     | AS1_FMOSREL_P        |                      | AS1_VITB12         |                           |                  |
-| AS1_CV         | AS1_FMOSREL_S        |                      | AS1_CALCIUM        |                           |                  |
-| AS1_HN         | AS1_FMOSREL_O        |                      | AS1_PHOS           |                           |                  |
-| AS1_GT         | AS1_FMCVAREL_N       |                      | AS1_SODIUM         |                           |                  |
-| AS1_ARRM       | AS1_FMCVAREL_P       |                      | AS1_POTASS         |                           |                  |
-| AS1_DRST       | AS1_FMCVAREL_S       |                      | AS1_MAGNE          |                           |                  |
-| AS1_DRINS      | AS1_FMCVAREL_O       |                      | AS1_FE             |                           |                  |
-| AS1_DRHT       | AS1_FMCVBREL_N       |                      | AS1_ZN             |                           |                  |
-| AS1_DRAR       | AS1_FMCVBREL_P       |                      | AS1_COPPER         |                           |                  |
-| AS1_DRUL       | AS1_FMCVBREL_S       |                      | AS1_MANGAN         |                           |                  |
-| AS1_DRTH       | AS1_FMCVBREL_O       |                      | AS1_SE             |                           |                  |
-| AS1_DROS       | AS1_FMCDREL_N        |                      | AS1_CHOL           |                           |                  |
-| AS1_DRDM       | AS1_FMCDREL_P        |                      | AS1_SFA            |                           |                  |
-| AS1_DRSTK      | AS1_FMCDREL_S        |                      | AS1_USFA           |                           |                  |
-| AS1_DRAS       | AS1_FMCDREL_O        |                      | AS1_MUFA           |                           |                  |
-| AS1_DRLP       | AS1_FMCHREL_N        |                      | AS1_PUFA           |                           |                  |
-|                | AS1_FMCHREL_P        |                      | AS1_N3N6RATIO      |                           |                  |
-|                | AS1_FMCHREL_S        |                      | AS1_HOMAIR         |                           |                  |
-|                | AS1_FMCHREL_O        |                      | AS1_NEAP           |                           |                  |
-|                | AS1_FMPVREL_N        |                      | AS1_PRAL           |                           |                  |
-|                | AS1_FMPVREL_P        |                      | AS1_DASH           |                           |                  |
-|                | AS1_FMPVREL_S        |                      | AS1_GLU0_TR        |                           |                  |
-|                | AS1_FMPVREL_O        |                      | AS1_ALBUMIN_TR     |                           |                  |
-|                | AS1_FMLPREL_N        |                      | AS1_CREATININE_TR1 |                           |                  |
-|                | AS1_FMLPREL_P        |                      | AS1_AST_TR         |                           |                  |
-|                | AS1_FMLPREL_S        |                      | AS1_ALT_TR         |                           |                  |
-|                | AS1_FMLPREL_O        |                      | AS1_TCHL_TR        |                           |                  |
-|                | AS1_FMGTREL_N        |                      | AS1_HDL_TR         |                           |                  |
-|                | AS1_FMGTREL_P        |                      | AS1_TOTPRT         |                           |                  |
-|                | AS1_FMGTREL_S        |                      | AS1_CA             |                           |                  |
-|                | AS1_FMGTREL_O        |                      | AS1_NA             |                           |                  |
-|                | AS1_DRCP             |                      | AS1_K              |                           |                  |
-|                | AS1_DRFH             |                      | AS1_CRP            |                           |                  |
-|                | AS1_PREG             |                      | AS1_HBA1C          |                           |                  |
-|                | AS1_HYST             |                      | AS1_INS0           |                           |                  |
-|                | AS1_HYSTOVARYW       |                      | AS1_PRT_U          |                           |                  |
-|                | AS1_OVARYW           |                      | AS1_CREATINE_U     |                           |                  |
-|                | AS1_OBGYOP           |                      | AS1_CA_U           |                           |                  |
-|                | AS1_BRCA             |                      | AS1_NA_U           |                           |                  |
-|                |                      |                      | AS1_K_U            |                           |                  |
-|                |                      |                      | AS1_TSH            |                           |                  |
-|                |                      |                      | AS1_WAIST          |                           |                  |
-|                |                      |                      | AS1_HEIGHT         |                           |                  |
-|                |                      |                      | AS1_WEIGHT         |                           |                  |
-|                |                      |                      | AS1_BMI            |                           |                  |
+| binary(0 또는 1) | cath0 (계층 없는 범주형 변수) | cath1 (계층 있는 범주형 변수) | cnt (연속형 변수)       | dependent (종속변수) |
+| -------------- | -------------------- | -------------------- | ------------------ | ---------------- |
+| AS1_SEX        | AS1_JOBB             | AS1_EDUA             | AS1_AGE            | AS1_DT           |
+| AS1_HT         | AS1_FMHTREL_N        | AS1_DRINK            | AS1_TOTALC         | AS1_MT           |
+| AS1_DM         | AS1_FMHTREL_P        | AS1_SMOKEA           | AS1_SLPAMTM        |                  |
+| AS1_UL         | AS1_FMHTREL_S        | AS1_INCOME           | AS1_ENERGY         |                  |
+| AS1_AL         | AS1_FMHTREL_O        | AS1_PHYSTB           | AS1_CARBO          |                  |
+| AS1_MI         | AS1_FMDMREL_N        | AS1_PHYSIT           | AS1_FAT            |                  |
+| AS1_TH         | AS1_FMDMREL_P        | AS1_PHYACTL          | AS1_PROT           |                  |
+| AS1_CH         | AS1_FMDMREL_S        | AS1_PHYACTM          | AS1_FIBER          |                  |
+| AS1_CD         | AS1_FMDMREL_O        | AS1_PHYACTH          | AS1_RETINOL        |                  |
+| AS1_LP         | AS1_FMHEREL_N        |                      | AS1_BETACARO       |                  |
+| AS1_AS         | AS1_FMHEREL_P        |                      | AS1_VITD           |                  |
+| AS1_CL         | AS1_FMHEREL_S        |                      | AS1_VITE           |                  |
+| AS1_PV         | AS1_FMHEREL_O        |                      | AS1_VITK           |                  |
+| AS1_KD         | AS1_FMOSREL_N        |                      | AS1_VITC           |                  |
+| AS1_TOTCA1     | AS1_FMOSREL_P        |                      | AS1_VITB12         |                  |
+| AS1_CV         | AS1_FMOSREL_S        |                      | AS1_CALCIUM        |                  |
+| AS1_HN         | AS1_FMOSREL_O        |                      | AS1_PHOS           |                  |
+| AS1_GT         | AS1_FMCVAREL_N       |                      | AS1_SODIUM         |                  |
+| AS1_ARRM       | AS1_FMCVAREL_P       |                      | AS1_POTASS         |                  |
+| AS1_DRST       | AS1_FMCVAREL_S       |                      | AS1_MAGNE          |                  |
+| AS1_DRINS      | AS1_FMCVAREL_O       |                      | AS1_FE             |                  |
+| AS1_DRHT       | AS1_FMCVBREL_N       |                      | AS1_ZN             |                  |
+| AS1_DRAR       | AS1_FMCVBREL_P       |                      | AS1_COPPER         |                  |
+| AS1_DRUL       | AS1_FMCVBREL_S       |                      | AS1_MANGAN         |                  |
+| AS1_DRTH       | AS1_FMCVBREL_O       |                      | AS1_SE             |                  |
+| AS1_DROS       | AS1_FMCDREL_N        |                      | AS1_CHOL           |                  |
+| AS1_DRDM       | AS1_FMCDREL_P        |                      | AS1_SFA            |                  |
+| AS1_DRSTK      | AS1_FMCDREL_S        |                      | AS1_USFA           |                  |
+| AS1_DRAS       | AS1_FMCDREL_O        |                      | AS1_MUFA           |                  |
+| AS1_DRLP       | AS1_FMCHREL_N        |                      | AS1_PUFA           |                  |
+|                | AS1_FMCHREL_P        |                      | AS1_N3N6RATIO      |                  |
+|                | AS1_FMCHREL_S        |                      | AS1_HOMAIR         |                  |
+|                | AS1_FMCHREL_O        |                      | AS1_NEAP           |                  |
+|                | AS1_FMPVREL_N        |                      | AS1_PRAL           |                  |
+|                | AS1_FMPVREL_P        |                      | AS1_DASH           |                  |
+|                | AS1_FMPVREL_S        |                      | AS1_GLU0_TR        |                  |
+|                | AS1_FMPVREL_O        |                      | AS1_ALBUMIN_TR     |                  |
+|                | AS1_FMLPREL_N        |                      | AS1_CREATININE_TR1 |                  |
+|                | AS1_FMLPREL_P        |                      | AS1_AST_TR         |                  |
+|                | AS1_FMLPREL_S        |                      | AS1_ALT_TR         |                  |
+|                | AS1_FMLPREL_O        |                      | AS1_TCHL_TR        |                  |
+|                | AS1_FMGTREL_N        |                      | AS1_HDL_TR         |                  |
+|                | AS1_FMGTREL_P        |                      | AS1_TOTPRT         |                  |
+|                | AS1_FMGTREL_S        |                      | AS1_CA             |                  |
+|                | AS1_FMGTREL_O        |                      | AS1_NA             |                  |
+|                | AS1_DRCP             |                      | AS1_K              |                  |
+|                | AS1_DRFH             |                      | AS1_CRP            |                  |
+|                | AS1_PREG             |                      | AS1_HBA1C          |                  |
+|                | AS1_HYST             |                      | AS1_INS0           |                  |
+|                | AS1_HYSTOVARYW       |                      | AS1_PRT_U          |                  |
+|                | AS1_OVARYW           |                      | AS1_CREATINE_U     |                  |
+|                | AS1_OBGYOP           |                      | AS1_CA_U           |                  |
+|                | AS1_BRCA             |                      | AS1_NA_U           |                  |
+|                |                      |                      | AS1_K_U            |                  |
+|                |                      |                      | AS1_TSH            |                  |
+|                |                      |                      | AS1_WAIST          |                  |
+|                |                      |                      | AS1_HEIGHT         |                  |
+|                |                      |                      | AS1_WEIGHT         |                  |
+|                |                      |                      | AS1_BMI            |                  |
 
 ### 2. 종속변수 정의
 
