변수 자르기 대작전 기록 추가

--- a/Docs/231120/변수 자르기 대작전.md
+++ b/Docs/231120/변수 자르기 대작전.md
@@ -12,11 +12,25 @@
 
 ## 실험
 
+### f1 score 등
+
 - x_train만 증강 후 xgboost : 자료 삭제
 
 > 최소: 0.3
 > 최대: 0.34782608695652173
 > 평균: 0.3262824444034863
+
+- x_train, test, val 각각 증강
+
+> Confusion Matrix:
+> [[285 85]
+>  [102 268]]
+>  [[TP FN]
+>  [ FP TN]]
+>  Accuracy: 0.747
+>  Precison: 0.759
+>  Recall : 0.724
+>  F1 Score: 0.741
 
 - 전체 증강 후 xgboost
 
@@ -30,9 +44,21 @@
 >  Recall : 0.759
 >  F1 Score: 0.772
 
-- feature importance
-  
-  ![fig1.png](C:\GIthub\KoGES_OP\Docs\231120\fig1.png)
+- 전체 증강 후 xgb
+
+> Confusion Matrix:
+> [[290 80]
+>  [ 93 277]]
+>  [[TP FN]
+>  [ FP TN]]
+>  Accuracy: 0.766
+>  Precison: 0.776
+>  Recall : 0.749
+>  F1 Score: 0.762
+
+### feature importance
+
+- ![fig1.png](C:\GIthub\KoGES_OP\Docs\231120\fig1.png)
 
 - 상위 20개 목록
 
@@ -56,3 +82,23 @@
 > AS1_HT 0.022881
 > AS1_FMOSREL_S 0.023556
 > AS1_ARRM 0.038178
+
+['SNP_A-2242511', 'AS1_CA_U', 'AS1_INCOME', 'AS1_BPSIT1RD',
+ 'AS1_WAIST', 'AS1_SLPAMTM', 'AS1_EDUA', 'AS1_PHYSTB', 'AS1_SLPHRD',
+ 'SNP_A-1922415', 'AS1_PHYACTM', 'SNP_A-2181021', 'AS1_BRCA',
+ 'SNP_A-2218697', 'AS1_CHILD_P', 'AS1_DRHT', 'AS1_AGE',
+ 'SNP_A-1984271', 'AS1_HT', 'AS1_ARRM']
+
+
+
+- top20 추출 후
+
+> Confusion Matrix:
+> [[287 82]
+>  [ 79 291]]
+>  [[TP FN]
+>  [ FP TN]]
+>  Accuracy: 0.782
+>  Precison: 0.780
+>  Recall : 0.786
+>  F1 Score: 0.783
