--- a/Docs/231120/변수 자르기 대작전.md
+++ b/Docs/231120/변수 자르기 대작전.md
@@ -89,8 +89,6 @@
  'SNP_A-2218697', 'AS1_CHILD_P', 'AS1_DRHT', 'AS1_AGE',
  'SNP_A-1984271', 'AS1_HT', 'AS1_ARRM']
 
-
-
 - top20 추출 후
 
 > Confusion Matrix:
@@ -102,3 +100,55 @@
 >  Precison: 0.780
 >  Recall : 0.786
 >  F1 Score: 0.783
+
+## 폐경 전
+
+전체 변수 전체 증강
+
+Confusion Matrix:
+[[246 47]
+ [ 13 280]]
+ [[TP FN]
+ [ FP TN]]
+ Accuracy: 0.898
+ Precison: 0.856
+ Recall : 0.956
+ F1 Score: 0.903
+
+
+
+상위 20개 목록
+
+['AS1_COPPER', 'AS1_INQ', 'AS1_WBC', 'AS1_ALT_TR', 'AS1_BDFTR',
+ 'AS1_PHYACTH', 'AS1_PHYACTM', 'AS1_DRCP', 'AS1_BETACARO',
+ 'AS1_HOMAIR', 'AS1_EDUA', 'AS1_BMI', 'AS1_FPREGAG', 'AS1_INSM',
+ 'AS1_DRINK', 'AS1_CRP', 'AS1_DRHT', 'AS1_CHILD_P', 'SNP_A-2310995',
+ 'AS1_TOTALC']
+
+
+
+상위 20개 변수 전체 증강
+
+Confusion Matrix:
+[[261 32]
+ [ 15 278]]
+ [[TP FN]
+ [ FP TN]]
+ Accuracy: 0.920
+ Precison: 0.897
+ Recall : 0.949
+ F1 Score: 0.922
+
+
+
+상위 20개 변수 일부 증강
+
+Confusion Matrix:
+[[229 64]
+ [ 67 226]]
+ [[TP FN]
+ [ FP TN]]
+ Accuracy: 0.776
+ Precison: 0.779
+ Recall : 0.771
+ F1 Score: 0.775
